# pad-lab-3

./: .gitignore  .pre-commit-config.yaml  README.md  azure-pipelines.yml  compose.yaml  manage.py  pyproject.toml  requirements.txt  trips.json
.github/workflows/: tickets.yml
apps/: __init__.py  __main__.py  asgi.py  authentication.py  celery.py
apps/core/: exceptions.py  permissions.py  urls.py
apps/core/migrations/: 0001_initial.py  0003_ticket_pdf_file.py  0006_alter_tripinfocache_table.py  0009_alter_tripinfocache_trip_nr.py  0011_delete_tripinfocache_remove_ticket_description_and_more.py  0012_alter_ticket_destination_alter_ticket_origin.py  0014_ticket_can_cancel_ticket_can_confirm.py
apps/core/services/: email_service.py  statistics.py  ticket_pdf_service.py  trip_service.py
apps/core/templates/emails/: ticket_email.html  trip_reminder_email.html
apps/core/templates/tickets/: ticket_detail.html  ticket_list.html  ticket_pdf_template.html
apps/debug/: apps.py  urls.py  views.py
apps/depot/: apps.py  urls.py  utils.py  views.py
apps/depot/backends/: base.py  client.py  json.py
apps/treasury/: apps.py
apps/treasury/backends/: base.py  client.py
apps/ui/: views.py
apps/ui/templates/ui/: home.html  partial.html  partial_full.html
deployment/compose/: tickets-provider.yaml
deployment/docker/: Dockerfile  docker-entrypoint.sh  run-tests.sh
tests/: conftest.py  test_authentication.py  test_otel.py  test_urls.py
tests/core/: test_permissions.py  test_serializers.py  test_tasks.py  test_urls.py  test_views.py
tests/core/services/: test_email_service.py  test_pdf_service.py  test_reminder_service.py  test_statistics.py
tests/debug/: __init__.py  conftest.py  test_apps.py  test_urls.py  test_views.py  test_views_whoami.py
tests/depot/: test_backends.py  test_urls.py  test_utils.py  test_views.py
tests/treasury/: test_backends.py
tests/ui/: test_urls.py  test_views.py
tickets/: __main__.py  otel.py  settings.py  urls.py  wsgi.py
tickets/core/: apps.py  models.py  serializers.py  tasks.py  views.py
tickets/core/migrations/: 0002_ticket_price_ticket_reserved_until_and_more.py  0004_alter_ticket_options_alter_ticket_price_and_more.py  0005_tripinfocache.py  0007_alter_tripinfocache_table.py  0008_tripinfocache_trip_nr.py  0010_remove_ticket_pdf_file_ticket_file.py  0013_ticket_refund_id.py
tickets/core/services/: trip_reminder_service.py
tickets/core/templates/emails/: trip_cancellation_email.html
tickets/debug/: views.py
tickets/depot/: exceptions.py  serializers.py
tickets/depot/backends/: json.py  service.py
tickets/treasury/: exceptions.py  formatter.py
tickets/treasury/backends/: service.py
tickets/ui/: apps.py  urls.py
tickets/ui/templates/: base.html
